tests/script_errors/lexer_invalid_float/error.txt
Error: 
    1 | 12.0_5
      |     ^ An unexpected character '_' was found